[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/characters.png" type="Texture" id=1]
[ext_resource path="res://characters/player/Player.gd" type="Script" id=2]
[ext_resource path="res://sprites/dash.png" type="Texture" id=3]
[ext_resource path="res://sprites/attack02.png" type="Texture" id=7]
[ext_resource path="res://sprites/attack01.png" type="Texture" id=8]
[ext_resource path="res://sprites/attack00.png" type="Texture" id=9]
[ext_resource path="res://sprites/attack03.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 448, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 448, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 544, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "idle",
"speed": 0.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": false,
"name": "fall",
"speed": 0.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 10 ) ],
"loop": false,
"name": "attack",
"speed": 14.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": false,
"name": "jump",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "dash",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 7.5, 11 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 24, 15.1081 )
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2, 0 )
z_index = 1
frames = SubResource( 8 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.38504, 5.09921 )
shape = SubResource( 9 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 16, 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.166, 0.166 )
limit_left = 0
limit_top = 0
limit_right = 832
limit_bottom = 368
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_limits = true

[node name="DashDuration" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 2.33292, 4.96623 )
scale = Vector2( 0.766708, 1.10338 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="visibility_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_visibility_changed"]
[connection signal="timeout" from="DashDuration" to="." method="_on_DashDuration_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_DashCooldown_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
